# Rust3D

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  hmmmmmmm.txt  imgui.ini  infos.md  rd_execute.cap
.github/workflows/: windows_x64.yml
crates/: CountLines.bat
crates/editor/: Cargo.toml
crates/editor/src/: gfx_demo.rs  main.rs
crates/engine/backend_vulkan/: Cargo.toml
crates/engine/backend_vulkan/src/: vk_command_buffer.rs  vk_image_sampler.rs  vk_physical_device.rs  vk_render_pass_instance.rs  vk_shader_instance.rs
crates/engine/backend_vulkan_win32/: Cargo.toml
crates/engine/backend_vulkan_win32/src/: vk_surface_win32.rs
crates/engine/backends/backend_launcher/: Cargo.toml
crates/engine/backends/backend_launcher/src/: lib.rs
crates/engine/backends/backend_vulkan/: Cargo.toml
crates/engine/backends/backend_vulkan/src/: dynamic_resource_ctx.rs  lib.rs  vk_buffer.rs  vk_command_buffer.rs  vk_descriptor_pool.rs  vk_descriptor_set.rs  vk_device.rs  vk_dst_set_layout.rs  vk_image.rs  vk_image_sampler.rs  vk_instance.rs  vk_physical_device.rs  vk_render_pass.rs  vk_render_pass_instance.rs  vk_shader.rs  vk_shader_instance.rs  vk_types.rs
crates/engine/backends/backend_vulkan/src/renderer/: render_pass_pool.rs  vk_render_pass.rs  vk_render_pass_instance.rs
crates/engine/backends/backend_vulkan_wayland/: Cargo.toml
crates/engine/backends/backend_vulkan_wayland/src/: lib.rs  vk_surface_wayland.rs
crates/engine/backends/backend_vulkan_win32/: Cargo.toml
crates/engine/backends/backend_vulkan_win32/src/: lib.rs  vk_surface_win32.rs
crates/engine/backends/plateform_wayland/: Cargo.toml
crates/engine/backends/plateform_win32/: Cargo.toml
crates/engine/common/gfx/: Cargo.toml
crates/engine/common/gfx_types/: Cargo.toml
crates/engine/common/plateform/: Cargo.toml
crates/engine/common/renderers/: Cargo.toml
crates/engine/common/renderers/src/: lib.rs
crates/engine/common/resl/: Cargo.toml  build.rs  shader.resl
crates/engine/common/resl/src/: ast.rs  hlsl_block.rs  hlsl_builder.rs  hlsl_to_spirv.rs  language.lalrpop  languagev2.lalrpop  lib.rs  list_of.rs  parsed_instructions.rs  resl.rs  shader.resl  shader_pass.rs
crates/engine/common/shader_base/: Cargo.toml
crates/engine/core/: Cargo.toml
crates/engine/core/src/: asset.rs  asset_id.rs  asset_manager.rs  asset_type_id.rs  engine.rs  engine_test_tools.rs  event_system.rs  lib.rs  renderer.rs  resource.rs  world.rs  world_view.rs
crates/engine/core/src/base_assets/: asset.rs  asset_manager.rs  material_asset.rs  material_instance_asset.rs  mesh_asset.rs  mod.rs
crates/engine/core/src/gfx/: buffer.rs  command_buffer.rs  gfx_resource.rs  image.rs  material.rs  mesh.rs  mod.rs  program_pool.rs  shader.rs  shader_instance.rs  surface.rs
crates/engine/core/src/gfx/renderer/: frame_graph.rs  mod.rs  render_node.rs  render_pass.rs  renderer.rs
crates/engine/core/src/resource/: allocator.rs  mod.rs  resource.rs  swapchain_resource.rs  tests.rs
crates/engine/core/src/scene_graph/: component_base.rs  transform_component.rs
crates/engine/core/src/test_tools/: engine_test_tools.rs  mod.rs
crates/engine/ecs/: Cargo.toml
crates/engine/ecs/src/: archetype.rs  component.rs  ecs.rs  entity.rs  id_generator.rs  lib.rs  query.rs  system.rs
crates/engine/ecs_macro/: Cargo.toml
crates/engine/ecs_macro/src/: lib.rs
crates/engine/gfx/: Cargo.toml
crates/engine/gfx/src/: command_buffer.rs  mesh.rs  surface.rs  types.rs
crates/engine/imgui/: Cargo.toml
crates/engine/imgui-bindings/: Cargo.toml  build.rs
crates/engine/imgui-bindings/src/: bindings.rs
crates/engine/imgui/src/: lib.rs
crates/engine/job_system/: Cargo.toml
crates/engine/job_system/src/: job_pool.rs  lib.rs  worker.rs
crates/engine/logger/: Cargo.toml
crates/engine/logger/src/: lib.rs
crates/engine/macros/: Cargo.toml
crates/engine/macros/src/: lib.rs
crates/engine/maths/: Cargo.toml
crates/engine/maths/src/: lib.rs  mat2.rs  mat3.rs  mat4.rs  rect2d.rs  vec2.rs  vec3.rs  vec4.rs
crates/engine/maths/tests/: vector_tests.rs
crates/engine/plateform/: Cargo.toml
crates/engine/plateform/src/: input_system.rs
crates/engine/plateform_win32/: Cargo.toml
crates/engine/plateform_win32/src/: lib.rs  window.rs
crates/engine/scene/: Cargo.toml
crates/engine/scene/src/: lib.rs
crates/engine/shader_compiler/: Cargo.toml
crates/engine/shader_compiler/src/: file_iterator.rs  includer.rs  lib.rs  parser.rs  reflect.rs  types.rs
crates/engine/third_party_io/: Cargo.toml
crates/engine/third_party_io/src/: image.rs  lib.rs
crates/main/src/: main.rs
data/shaders/: basic.shb  demo.resl  imgui_material.resl  imgui_material.shb  resolve.resl  resolve.shb
src/: CountLines.bat
src/editor/: Cargo.toml
src/editor/src/: gfx_demo.rs  main.rs
src/engine/backend_vulkan/: Cargo.toml
src/engine/backend_vulkan/src/: lib.rs  types.rs  vk_buffer.rs  vk_command_buffer.rs  vk_descriptor_pool.rs  vk_descriptor_set.rs  vk_device.rs  vk_framebuffer.rs  vk_image.rs  vk_image_sampler.rs  vk_instance.rs  vk_mesh.rs  vk_physical_device.rs  vk_queue.rs  vk_render_pass.rs  vk_render_pass_instance.rs  vk_shader.rs  vk_shader_instance.rs  vk_surface.rs  vk_swapchain.rs  vk_swapchain_resource.rs  vk_swpachain_resource.rs  vk_types.rs
src/engine/backend_vulkan_win32/: Cargo.toml
src/engine/backend_vulkan_win32/src/: lib.rs  vk_surface_win32.rs
src/engine/core/: Cargo.toml
src/engine/core/src/: asset.rs  asset_manager.rs  asset_type_id.rs  engine.rs  lib.rs
src/engine/gfx/: Cargo.toml
src/engine/imgui/: Cargo.toml
src/engine/imgui-bindings/: cimgui-bindgen.h
src/engine/macros/: Cargo.toml
src/engine/maths/: Cargo.toml
src/engine/maths_operators/: Cargo.toml
src/engine/plateform/: Cargo.toml
src/engine/plateform_win32/: Cargo.toml
src/engine/plateform_win32/src/: lib.rs  utils.rs  win32_input_system.rs  win32_inputs.rs  window.rs
src/engine/plateform_window/: Cargo.toml
src/engine/shader_compiler/: Cargo.toml
src/engine/third_party_io/: Cargo.toml
src/main/: Cargo.toml
(+82 files in other folders)
