[workspace]
members = [
    "crates/engine/core",
    "crates/engine/imgui",
    "crates/engine/imgui-bindings",
    "crates/engine/macros",
    "crates/engine/maths",
    "crates/engine/shader_compiler",
    "crates/engine/third_party_io",
    "crates/engine/backends/*",
    "crates/engine/common/*",
    "crates/editor",
    "crates/engine/job_system",
    "crates/engine/common/shader_base",
    "crates/engine/logger"
]
default-members = ["crates/editor/"]

[profile.production]
inherits = "release"
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1