[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"

[dependencies]
core = { path = "../engine/core" }
third_party_io = { path = "../engine/third_party_io" }
shader_compiler = { path = "../engine/shader_compiler" }
maths = { path = "../engine/maths" }
macros = { path = "../engine/macros" }
gfx = { path = "../engine/common/gfx" }
plateform = { path = "../engine/common/plateform" }
imgui = { path = "../engine/imgui" }
backend_launcher = { path = "../engine/backends/backend_launcher" }