[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"

[dependencies]
core = { path = "../engine/core" }
third_party_io = { path = "../engine/third_party_io" }
maths = { path = "../engine/maths" }
macros = { path = "../engine/macros" }
resl = { path = "../engine/common/resl" }
plateform = { path = "../engine/common/plateform" }
imgui = { path = "../engine/imgui" }
backend_launcher = { path = "../engine/backends/backend_launcher" }
ecs = { path = "../engine/ecs" }
job_system = { path = "../engine/job_system" }
logger = { path = "../engine/logger" }
shader_base = { path = "../engine/common/gfx_types" }
log = "0.4.17"
renderers = { path = "../engine/common/renderers" }
imgui-bindings = {path = "../engine/imgui-bindings"}