[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"

[dependencies]
core = { path = "../engine/core" }
third_party_io = { path = "../engine/third_party_io" }
shader_compiler = { path = "../engine/shader_compiler" }
maths = { path = "../engine/maths" }
macros = { path = "../engine/macros" }
gfx = { path = "../engine/gfx" }
plateform = { path = "../engine/plateform" }
plateform_win32 = { path = "../engine/plateform_win32" }
backend_vulkan = { path = "../engine/backend_vulkan" }
backend_vulkan_win32 = { path = "../engine/backend_vulkan_win32" }