[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
plateform = { path = "../common/plateform" }
gfx-maths = "0.2.8"
logger = { path = "../logger" }
lazy_static = "1.4.0"
ecs = { path = "../ecs" }
maths = { path = "../maths" }
shader_base = { path = "../common/gfx_types" }
log = "0.4.17"
enumflags2 = "0.7.8"