[package]
name = "imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-bindings = { path = "../imgui-bindings" }
gfx = { path = "../gfx" }
shader_compiler = { path = "../shader_compiler" }
macros = { path = "../macros" }
maths = { path = "../maths" }
memoffset = "0.6.5"
core = { path = "../core" }
plateform = { path = "../plateform" }