[package]
name = "imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# imgui = { version = "0.10.0", features = ["docking"]}
imgui-bindings = {path = "../imgui-bindings" }
gfx = { path = "../common/gfx" }
shader_compiler = { path = "../shader_compiler" }
macros = { path = "../macros" }
maths = { path = "../maths" }
memoffset = "0.8.0"
core = { path = "../core" }
plateform = { path = "../common/plateform" }