[package]
name = "imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-bindings = {path = "../imgui-bindings" }
gfx = { path = "../common/gfx" }
macros = { path = "../macros" }
maths = { path = "../maths" }
memoffset = "0.9.0"
core = { path = "../core" }
plateform = { path = "../common/plateform" }
logger = {path = "../logger"}