[package]
name = "backend_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plateform = { path = "../../common/plateform" }
gfx = { path = "../../common/gfx" }
core = { path = "../../core" }
backend_vulkan = { path = "../backend_vulkan" }
backend_vulkan_win32 = { path = "../backend_vulkan_win32" }
plateform_win32 = { path = "../plateform_win32" }
logger = {path = "../../logger"}