[package]
name = "backend_vulkan_win32"
version = "0.1.0"
edition = "2021"

[dependencies]
gfx = {path = "../../common/gfx"}
maths = {path = "../../maths"}
macros = { path = "../../macros" }
backend_vulkan = { path = "../backend_vulkan" }
plateform = {path = "../../common/plateform"}
plateform_win32 = {path = "../plateform_win32"}
windows = { version = "0.51.1", features = [ "Win32"] }
ash = "0.37.3+1.3.251"
gpu-allocator =  { version= "0.23.0", default-features = false, features=["vulkan"]}
raw-window-handle = "0.5.2"
logger = {path = "../../logger"}