[package]
name = "renderers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { path = "../../imgui" }
core = { path = "../../core" }
gfx = { path = "../gfx" }
shader_base = { path = "../gfx_types" }
maths = { path = "../../maths" }