[package]
name = "resl"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
display_json = "0.2.1"
serde = { version = "1.0.188", features = ["rc"] }
serde_json = "1.0.107"
logger = { path = "../../logger" }
shader_base = { path = "../gfx_types" }
shaderc = "0.8.2"
regex = { version = "1.9.6", features = [] }